# codequery

./: .travis.yml  CMakeLists.txt
clangcq/: CMakeLists.txt  main_cqclang.cpp
cmakefind/: FindLibClang.cmake
